# detection_evaluation_tool

./: CMakeLists.txt  README.txt  evaluate_object_bv.cpp
data/detections/: 0.txt  1.txt  2.txt
data/detections1/: 0.txt  1.txt  2.txt
data/detections2/: 000000.txt  000001.txt  000002.txt
data/label/: result.txt
gt_parse/: parse.cpp
